--- a/graphs/graph_for_python.ipynb
+++ b/graphs/graph_for_python.ipynb
@@ -2,111 +2,131 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "5380e20c-854d-47e5-8c70-c105c367fc06",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "RuntimeError",
+     "evalue": "asyncio.run() cannot be called from a running event loop",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[5], line 90\u001b[0m\n\u001b[0;32m     88\u001b[0m \u001b[38;5;66;03m# Run the operations and generate the graphs\u001b[39;00m\n\u001b[0;32m     89\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;18m__name__\u001b[39m \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m__main__\u001b[39m\u001b[38;5;124m\"\u001b[39m:\n\u001b[1;32m---> 90\u001b[0m     \u001b[43masyncio\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mrun\u001b[49m\u001b[43m(\u001b[49m\u001b[43mrun_operations\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[1;32m~\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\asyncio\\runners.py:190\u001b[0m, in \u001b[0;36mrun\u001b[1;34m(main, debug, loop_factory)\u001b[0m\n\u001b[0;32m    161\u001b[0m \u001b[38;5;250m\u001b[39m\u001b[38;5;124;03m\"\"\"Execute the coroutine and return the result.\u001b[39;00m\n\u001b[0;32m    162\u001b[0m \n\u001b[0;32m    163\u001b[0m \u001b[38;5;124;03mThis function runs the passed coroutine, taking care of\u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    186\u001b[0m \u001b[38;5;124;03m    asyncio.run(main())\u001b[39;00m\n\u001b[0;32m    187\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[0;32m    188\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m events\u001b[38;5;241m.\u001b[39m_get_running_loop() \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[0;32m    189\u001b[0m     \u001b[38;5;66;03m# fail fast with short traceback\u001b[39;00m\n\u001b[1;32m--> 190\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mRuntimeError\u001b[39;00m(\n\u001b[0;32m    191\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124masyncio.run() cannot be called from a running event loop\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m    193\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m Runner(debug\u001b[38;5;241m=\u001b[39mdebug, loop_factory\u001b[38;5;241m=\u001b[39mloop_factory) \u001b[38;5;28;01mas\u001b[39;00m runner:\n\u001b[0;32m    194\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m runner\u001b[38;5;241m.\u001b[39mrun(main)\n",
+      "\u001b[1;31mRuntimeError\u001b[0m: asyncio.run() cannot be called from a running event loop"
+     ]
+    }
+   ],
    "source": [
-    "import numpy as np\n",
-    "import sys\n",
+    "import asyncio\n",
     "from graphviz import Digraph, Source\n",
     "\n",
     "# Step 1: Define a class for the computational graph node\n",
     "class Node:\n",
-    "    def __init__(self, value, name=\"\"):\n",
-    "        self.value = value  # The numeric or symbolic value this node holds\n",
-    "        self.name = name    # Name of the node (used in visualization)\n",
-    "        self.parents = []   # The nodes that feed into this one\n",
-    "        self.op = None      # The operation (if any) that produced this node\n",
-    "\n",
-    "    def __add__(self, other):\n",
-    "        result_value = self.value + other.value\n",
-    "        result = Node(result_value, f\"({self.name} + {other.name})\")\n",
-    "        result.parents = [self, other]\n",
-    "        result.op = \"+\"\n",
-    "        return result\n",
-    "\n",
-    "    def __mul__(self, other):\n",
-    "        result_value = self.value * other.value\n",
-    "        result = Node(result_value, f\"({self.name} * {other.name})\")\n",
-    "        result.parents = [self, other]\n",
-    "        result.op = \"*\"\n",
-    "        return result\n",
-    "\n",
-    "    def __sub__(self, other):\n",
-    "        result_value = self.value - other.value\n",
-    "        result = Node(result_value, f\"({self.name} - {other.name})\")\n",
-    "        result.parents = [self, other]\n",
-    "        result.op = \"-\"\n",
-    "        return result\n",
-    "\n",
-    "    def __truediv__(self, other):\n",
-    "        result_value = self.value / other.value\n",
-    "        result = Node(result_value, f\"({self.name} / {other.name})\")\n",
-    "        result.parents = [self, other]\n",
-    "        result.op = \"/\"\n",
-    "        return result\n",
-    "\n",
-    "    def __pow__(self, power):\n",
-    "        result_value = self.value ** power\n",
-    "        result = Node(result_value, f\"({self.name} ** {power})\")\n",
-    "        result.parents = [self]\n",
-    "        result.op = \"**\"\n",
-    "        return result\n",
-    "\n",
-    "    def memory_info(self):\n",
-    "        \"\"\"Display memory information for the current node.\"\"\"\n",
-    "        size = sys.getsizeof(self.value)\n",
-    "        return f\"Node '{self.name}' holds value {self.value} occupying {size} bytes in memory.\"\n",
+    "    def __init__(self, operation, result=None, name=\"\"):\n",
+    "        self.operation = operation  # The operation string (e.g., \"x + y\")\n",
+    "        self.result = result          # The result of the operation\n",
+    "        self.name = name              # Name of the node (used in visualization)\n",
+    "        self.parents = []             # The nodes that feed into this one\n",
     "\n",
     "    def visualize(self, dot):\n",
     "        \"\"\"Visualize the current node and its parents in the computational graph.\"\"\"\n",
-    "        # Define colors for different node types\n",
-    "        color = 'lightblue' if self.op is None else 'lightgreen'\n",
-    "        dot.node(str(id(self)), f\"{self.name} = {self.value}\\n{self.memory_info()}\", fillcolor=color)\n",
-    "\n",
+    "        dot.node(str(id(self)), f\"{self.operation}\\nResult: {self.result}\", fillcolor='lightblue')\n",
     "        for parent in self.parents:\n",
-    "            dot.edge(str(id(parent)), str(id(self)), label=self.op)\n",
-    "            parent.visualize(dot)\n",
+    "            dot.edge(str(id(parent)), str(id(self)), label='')\n",
     "\n",
     "# Step 2: Visualize the computational graph using Graphviz\n",
-    "def visualize_computational_graph(output_node, file_path='graph_output.png'):\n",
+    "def visualize_computational_graph(nodes, file_path='graph_output'):\n",
     "    dot = Digraph(format='png', node_attr={'style': 'filled', 'fontsize': '10'})\n",
-    "    output_node.visualize(dot)\n",
+    "    for node in nodes:\n",
+    "        node.visualize(dot)\n",
     "    dot.render(file_path, cleanup=True)  # Save as PNG and clean up temporary files\n",
-    "    print(f\"Graph saved as {file_path}\")\n",
+    "    print(f\"Graph saved as {file_path}.png\")\n",
     "    return Source(dot.source)\n",
     "\n",
-    "# Step 3: Implement a function to find pairs summing to a target in an array\n",
-    "def find_pairs_with_sum(arr, target):\n",
-    "    \"\"\"Finds and returns pairs of elements in arr that sum up to the target.\"\"\"\n",
-    "    pairs = []\n",
-    "    for i in range(len(arr)):\n",
-    "        for j in range(i + 1, len(arr)):\n",
-    "            if arr[i] + arr[j] == target:\n",
-    "                pairs.append((arr[i], arr[j]))\n",
-    "                print(f\"Pair found: {arr[i]} + {arr[j]} = {target}\")\n",
-    "    return pairs\n",
+    "# Step 3: Define the synchronous computation\n",
+    "def sync_operations():\n",
+    "    \"\"\"Perform synchronous operations and return nodes for visualization.\"\"\"\n",
+    "    nodes = []\n",
+    "    \n",
+    "    # Example operations\n",
+    "    x = Node(\"x = 2\", result=2)\n",
+    "    nodes.append(x)\n",
     "\n",
-    "# Step 4: Example usage\n",
-    "# Define input nodes with numeric values\n",
-    "a = Node(2, \"a\")\n",
-    "b = Node(3, \"b\")\n",
-    "c = Node(5, \"c\")\n",
+    "    y = Node(\"y = 3\", result=3)\n",
+    "    nodes.append(y)\n",
     "\n",
-    "# Perform operations and track the forward pass\n",
-    "output = (a + b) * c  # (a + b) * c\n",
-    "output_with_power = output ** 2  # ((a + b) * c) ** 2\n",
-    "output_with_div = output_with_power / (a + b)  # (((a + b) * c) ** 2) / (a + b)\n",
+    "    z = Node(\"z = x + y\", result=x.result + y.result)\n",
+    "    z.parents = [x, y]\n",
+    "    nodes.append(z)\n",
     "\n",
-    "# Visualize the computational graph\n",
-    "visualize_computational_graph(output_with_div, file_path='computational_graph')\n",
+    "    w = Node(\"w = z * 5\", result=z.result * 5)\n",
+    "    w.parents = [z]\n",
+    "    nodes.append(w)\n",
     "\n",
-    "# Step 5: Example of using the find_pairs_with_sum function\n",
-    "arr = [2, 1, 5, 3]\n",
-    "target = 4\n",
-    "find_pairs_with_sum(arr, target)\n"
+    "    return nodes\n",
+    "\n",
+    "# Step 4: Define the asynchronous computation\n",
+    "async def async_operations():\n",
+    "    \"\"\"Perform asynchronous operations and return nodes for visualization.\"\"\"\n",
+    "    nodes = []\n",
+    "    \n",
+    "    # Example operations\n",
+    "    x = Node(\"x = 2\", result=2)\n",
+    "    nodes.append(x)\n",
+    "\n",
+    "    y = Node(\"y = 3\", result=3)\n",
+    "    nodes.append(y)\n",
+    "\n",
+    "    # Simulate an asynchronous operation\n",
+    "    await asyncio.sleep(1)  # Simulate delay\n",
+    "\n",
+    "    z = Node(\"z = await async_add(x, y)\", result=x.result + y.result)\n",
+    "    z.parents = [x, y]\n",
+    "    nodes.append(z)\n",
+    "\n",
+    "    w = Node(\"w = z * 5\", result=z.result * 5)\n",
+    "    w.parents = [z]\n",
+    "    nodes.append(w)\n",
+    "\n",
+    "    return nodes\n",
+    "\n",
+    "async def async_add(a, b):\n",
+    "    await asyncio.sleep(0.1)  # Simulate some asynchronous operation\n",
+    "    return a + b\n",
+    "\n",
+    "# Step 5: Run the synchronous and asynchronous operations\n",
+    "async def run_operations():\n",
+    "    # Synchronous part\n",
+    "    sync_nodes = sync_operations()\n",
+    "    visualize_computational_graph(sync_nodes, file_path='sync_computational_graph')\n",
+    "\n",
+    "    # Asynchronous part\n",
+    "    async_nodes = await async_operations()\n",
+    "    visualize_computational_graph(async_nodes, file_path='async_computational_graph')\n",
+    "\n",
+    "# Run the operations and generate the graphs\n",
+    "if __name__ == \"__main__\":\n",
+    "    asyncio.run(run_operations())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "253f2bc5-ce66-439c-b709-3382a5284734",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e7071d64-dcd6-4d60-b99d-881a447376f7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
